<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_mapping</name>
  <version>0.0.0</version>
  <description>Package for robot mapping functionalities, including point cloud to laser scan conversion.</description>
  
  <maintainer email="yogachand@todo.todo">yogachand</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Package dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pointcloud_to_laserscan</depend> <!-- Added dependency -->

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
